[gd_scene load_steps=10 format=2]

[ext_resource path="res://space age.otf" type="DynamicFontData" id=1]
[ext_resource path="res://tło.gd" type="Script" id=2]
[ext_resource path="res://TeknoAXEs Royalty Free Music - Royalty Free Music 112 (Try Hacking the Mainframe) TechnoBreakbeat Action Suspense.ogg" type="AudioStream" id=3]
[ext_resource path="res://317thj.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.784314, 0.2, 0.2, 1 )
font_data = ExtResource( 1 )

[sub_resource type="VisualShader" id=2]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 434.287 ]
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.45098, 0.392157, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="317thj" type="Sprite" parent="TextureRect"]
position = Vector2( 247.615, 204.29 )
scale = Vector2( 0.73849, 0.650959 )
texture = ExtResource( 4 )

[node name="LabelUI" type="Label" parent="."]
margin_left = 19.2022
margin_top = 10.2986
margin_right = 450.203
margin_bottom = 167.299
custom_fonts/font = SubResource( 1 )
text = "Witaj, samuraju. Mamy liczbe 1-100 do zgadniecia! DUNT USE WHEEL"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxUI" type="SpinBox" parent="."]
margin_left = 427.895
margin_top = 274.379
margin_right = 548.896
margin_bottom = 298.379
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxCode" type="SpinBox" parent="."]
visible = false
margin_left = 126.538
margin_top = 434.361
margin_right = 248.538
margin_bottom = 522.361
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTries" type="SpinBox" parent="."]
material = SubResource( 3 )
margin_left = 428.211
margin_top = 304.976
margin_right = 502.211
margin_bottom = 328.976
theme = SubResource( 4 )
min_value = 1.0
value = 1.0
exp_edit = true
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="życia" type="Label" parent="."]
margin_left = 82.9377
margin_top = 303.968
margin_right = 425.938
margin_bottom = 327.968
custom_fonts/font = SubResource( 5 )
text = "LICZBA TWOICH LIVES:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wpis" type="Label" parent="."]
margin_left = 209.664
margin_top = 276.375
margin_right = 492.664
margin_bottom = 300.375
custom_fonts/font = SubResource( 5 )
text = "your guess:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true
[connection signal="value_changed" from="SpinBoxUI" to="." method="_on_SpinBoxUI_value_changed"]
